--- a/src/app/modules/syndic/residences/add-residence/add-residence.component.html
+++ b/src/app/modules/syndic/residences/add-residence/add-residence.component.html
@@ -24,7 +24,7 @@
                     name="adresse1" id='adresse1' required></div>
                 <div class='input__field'><label>adresse *</label><input type="text" [(ngModel)]="adresse2"
                     name="adresse2" id='adresse2' required></div>
-                <div class='input__field'><label>ville *</label><input type="text" [(ngModel)]="city_name"
+                <div class='input__field'><label>villee *</label><input type="text" [(ngModel)]="city_name"
                     name="city_name" id='city_name' required></div>
               </div>
             </fieldset>
